Set KFileDialog overwrite option for saving to follow the Qt option

Also updated test utility and autotests accordingly.

REVIEW:127944
BUG:360666